build.log
mockcat> configure (lib)
Configuring mockcat-1.1.0.0...
mockcat> build (lib) with ghc-9.6.7
Preprocessing library for mockcat-1.1.0.0..
Building library for mockcat-1.1.0.0..
[ 1 of 22] Compiling Paths_mockcat
[ 2 of 22] Compiling Test.MockCat.AssociationList
[ 3 of 22] Compiling Test.MockCat.Cons
[ 4 of 22] Compiling Test.MockCat.Internal.GHC.StableName
[ 5 of 22] Compiling Test.MockCat.Internal.Types
[ 6 of 22] Compiling Test.MockCat.Internal.Registry.Core
[ 7 of 22] Compiling Test.MockCat.Internal.Message
[ 8 of 22] Compiling Test.MockCat.Internal.Verify

/home/kenji/source/haskell/mockcat/src/Test/MockCat/Internal/Verify.hs:14:20: warning: [-Wunused-imports]
    The import of ‘listToMaybe’ from module ‘Data.Maybe’ is redundant
   |
14 | import Data.Maybe (listToMaybe, catMaybes, isNothing)
   |                    ^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/Internal/Verify.hs:17:1: warning: [-Wunused-imports]
    The import of ‘Test.MockCat.AssociationList’ is redundant
      except perhaps to import instances from ‘Test.MockCat.AssociationList’
    To import instances alone, use: import Test.MockCat.AssociationList()
   |
17 | import Test.MockCat.AssociationList (AssociationList)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[ 9 of 22] Compiling Test.MockCat.Param
[10 of 22] Compiling Test.MockCat.Internal.Builder

/home/kenji/source/haskell/mockcat/src/Test/MockCat/Internal/Builder.hs:37:1: warning: [-Wunused-imports]
    The import of ‘Test.MockCat.Internal.Message’ is redundant
      except perhaps to import instances from ‘Test.MockCat.Internal.Message’
    To import instances alone, use: import Test.MockCat.Internal.Message()
   |
37 | import Test.MockCat.Internal.Message
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[11 of 22] Compiling Test.MockCat.Internal.MockRegistry
[12 of 22] Compiling Test.MockCat.TH.ClassAnalysis
[13 of 22] Compiling Test.MockCat.TH.TypeUtils
[14 of 22] Compiling Test.MockCat.TH.Types
[15 of 22] Compiling Test.MockCat.Verify

/home/kenji/source/haskell/mockcat/src/Test/MockCat/Verify.hs:21:1: warning: [-Wunused-imports]
    The import of ‘Control.Concurrent.STM’ is redundant
      except perhaps to import instances from ‘Control.Concurrent.STM’
    To import instances alone, use: import Control.Concurrent.STM()
   |
21 | import Control.Concurrent.STM (TVar, readTVarIO)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/Verify.hs:22:1: warning: [-Wunused-imports]
    The import of ‘countMismatchMessage, verifyCallCount,
                   verifyExpectationDirect, verifyResolvedAny,
                   verifyResolvedCallCount, verifyResolvedCount, verifyResolvedMatch,
                   verifyResolvedOrder’
    from module ‘Test.MockCat.Internal.Verify’ is redundant
   |
22 | import Test.MockCat.Internal.Verify
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

/home/kenji/source/haskell/mockcat/src/Test/MockCat/Verify.hs:39:1: warning: [-Wunused-imports]
    The import of ‘Control.Monad’ is redundant
      except perhaps to import instances from ‘Control.Monad’
    To import instances alone, use: import Control.Monad()
   |
39 | import Control.Monad (guard, when)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/Verify.hs:40:19: warning: [-Wunused-imports]
    The import of ‘elemIndex’ from module ‘Data.List’ is redundant
   |
40 | import Data.List (elemIndex, intercalate)
   |                   ^^^^^^^^^
[16 of 22] Compiling Test.MockCat.MockT
[17 of 22] Compiling Test.MockCat.TH.ContextBuilder
[18 of 22] Compiling Test.MockCat.Mock

[21 of 22] Compiling Test.MockCat.WithMock
/home/kenji/source/haskell/mockcat/src/Test/MockCat/Mock.hs:166:3: error: [GHC-83865]
    • Expected kind ‘(* -> *) -> * -> Constraint’,
        but ‘CreateMockFn (MockSpec params [Expectation verifyParams])’ has kind ‘Constraint’
    • In the instance declaration for
        ‘CreateMockFn (MockSpec params [Expectation verifyParams]) m fn’
    |
166 |   CreateMockFn (MockSpec params [Expectation verifyParams]) m fn
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/WithMock.hs:40:1: warning: [-Wunused-imports]
    The import of ‘Control.Monad.IO.Class’ is redundant
      except perhaps to import instances from ‘Control.Monad.IO.Class’
    To import instances alone, use: import Control.Monad.IO.Class()
   |
40 | import Control.Monad.IO.Class (MonadIO(..))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/WithMock.hs:41:1: warning: [-Wunused-imports]
    The import of ‘MonadReader, ask’
    from module ‘Control.Monad.Reader’ is redundant
   |
41 | import Control.Monad.Reader (ReaderT(..), runReaderT, MonadReader(..), ask)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/WithMock.hs:42:1: warning: [-Wunused-imports]
    The import of ‘TVar, atomically, modifyTVar'’
    from module ‘Control.Concurrent.STM’ is redundant
   |
42 | import Control.Concurrent.STM (TVar, newTVarIO, readTVarIO, modifyTVar', atomically)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/WithMock.hs:43:1: warning: [-Wunused-imports]
    The import of ‘State, execState’
    from module ‘Control.Monad.State’ is redundant
   |
43 | import Control.Monad.State (State, get, put, modify, execState)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/WithMock.hs:44:1: warning: [-Wunused-imports]
    The import of ‘ShouldBeCalled, calledWith, inOrder, inPartialOrder’
    from module ‘Test.MockCat.Verify’ is redundant
   |
44 | import Test.MockCat.Verify (ShouldBeCalled(..), VerificationSpec(..), TimesSpec(..), times, once, never, atLeast, atMost, greaterThan, lessThan, anything, inOrder, inPartialOrder, calledWith)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/WithMock.hs:45:1: warning: [-Wunused-imports]
    The import of ‘verifyCallCount, verifyResolvedAny,
                   verifyResolvedCount, verifyResolvedMatch, verifyResolvedOrder’
    from module ‘Test.MockCat.Internal.Verify’ is redundant
   |
45 | import Test.MockCat.Internal.Verify
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

/home/kenji/source/haskell/mockcat/src/Test/MockCat/WithMock.hs:53:1: warning: [-Wunused-imports]
    The import of ‘CountVerifyMethod, InvocationRecorder, MockName,
                   ResolvedMock, VerifyMatchType’
    from module ‘Test.MockCat.Internal.Types’ is redundant
   |
53 | import Test.MockCat.Internal.Types
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

/home/kenji/source/haskell/mockcat/src/Test/MockCat/WithMock.hs:67:1: warning: [-Wunused-imports]
    The qualified import of ‘Test.MockCat.Internal.MockRegistry’ is redundant
      except perhaps to import instances from ‘Test.MockCat.Internal.MockRegistry’
    To import instances alone, use: import Test.MockCat.Internal.MockRegistry()
   |
67 | import qualified Test.MockCat.Internal.MockRegistry as MockRegistry
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/home/kenji/source/haskell/mockcat/src/Test/MockCat/WithMock.hs:91:3: warning: [-Wunused-top-binds]
    Defined but not used: ‘extractParams’
   |
91 |   extractParams :: exp -> Proxy (ExpParams exp)
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the error:
       
       [S-7011]
       While building package mockcat-1.1.0.0 (scroll up to its section to see the error) using:
       /home/kenji/.stack/setup-exe-cache/x86_64-linux/Cabal-simple_DY68M0FN_3.10.3.0_ghc-9.6.7 --verbose=1 --builddir=.stack-work/dist/x86_64-linux/ghc-9.6.7 build lib:mockcat --ghc-options ""
       Process exited with code: ExitFailure 1 
